[package]
name = "codexform"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
proc-macro2 = { version = "1.0.66", features = ["span-locations"] }
quote = "1.0.33"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
syn = { version = "2.0.29", features = ["full", "extra-traits", "parsing"] }
